[tool.poetry]
name = "ft-total-perspective-vortex"
version = "0.1.0"
description = ""
authors = ["rutger <rutgercappendijk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pylama = "^8.4.1"
pytest = "^8.3.2"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
